网络错误重试。 下载文件失败时删除文件。

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ elephant.site.base-url=
 # 代理
 elephant.proxy.type=direct
 elephant.proxy.hostname=
-elephant.proxy.port=
+elephant.proxy.port=0
 
 # 下载
 elephant.download.path=
