修改jar文件名

--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,7 @@
     </dependencyManagement>
 
     <build>
+        <finalName>elephant</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
