--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+logging.level.root=info
+
 # 数据库
 spring.datasource.type=org.apache.commons.dbcp2.BasicDataSource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
