--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
             <groupId>me.gzj</groupId>
             <artifactId>gzj-core</artifactId>
             <version>${project.parent.version}</version>
