--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,22 @@
-logging.level.root=info
-
-# 数据库
 spring.datasource.type=org.apache.commons.dbcp2.BasicDataSource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=
-spring.datasource.username=
-spring.datasource.password=
+# 数据库URL
+spring.datasource.url=jdbc:mysql://localhost/elephant?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true
+# 数据库用户名
+spring.datasource.username=username
+# 数据库密码
+spring.datasource.password=password
 spring.datasource.dbcp2.connection-init-sqls=SET NAMES utf8mb4;
 
-# 站点
-elephant.site.base-url=
+# 站点基准URL
+elephant.site.base-url=http://example.com/
 
-# 代理
+# 代理类型 direct http socks
 elephant.proxy.type=direct
-elephant.proxy.hostname=
+# 代理主机名
+elephant.proxy.hostname=localhost
+# 代理端口
 elephant.proxy.port=0
 
-# 下载
-elephant.download.path=
+# 下载路径
+elephant.download.path=./download/
