优化视频添加时间的时区

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,8 @@ spring.datasource.dbcp2.connection-init-sqls=SET NAMES utf8mb4;
 
 # 站点基准URL
 elephant.site.base-url=http://example.com/
+# 时区ID
+elephant.site.time-zone-id=-5
 
 # 代理类型 direct http socks
 elephant.proxy.type=direct
