--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.type=org.apache.commons.dbcp2.BasicDataSource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # 数据库URL
-spring.datasource.url=jdbc:mysql://localhost/elephant?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true
+spring.datasource.url=jdbc:mysql://localhost/elephant?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&serverTimezone=Asia/Shanghai
 # 数据库用户名
 spring.datasource.username=username
 # 数据库密码
